# Emergence-Bot

./: .env copy  .gitignore  README.md  bot.py  pyproject.toml
Hadi/: .env  hadi.py
cogs/: linkunfucker.py  stuff.py  warframe.py
